<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacTicTacToe</string>
    <string name="description">null</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="Username_signin">Username</string>
    <string name="Password_signin">Password</string>
    <string name="Login">Login</string>
    <string name="ChangePass">Forgot Password</string>
    <string name="Chat">Chat</string>
 	<string name="Userlist">Userlist</string>
 	<string name="space_desc">space</string>
	<string name="Open">Open</string>
	<string name="Closed">Closed</string>
	<string name="PlayersPrompt">Online Players</string>
	<string name="ChatPrompt"> Chat</string>
	<string name="TieAISettingInfo">
	    Allow main-game Ties to count as wins for the board </string>
	<string name="TimeSettingInfo">
		Enable Time constrants of 30 seconds for each move on the next new game </string>
	<string name="ForceMoveSettingInfo">
	    Force Players to move on a subgame corresponding to your move </string>
	<string name="SecretSettingInfo">
	    Secret Setting - WARNING:Pretty Difficult
	</string>
	<string name="app_id">1119137601559950</string>
	<string name="turn_text">Your Turn</string>
</resources>
