<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ToeTactics.tictactictactoe.MainActivity" >

    <ImageView
        android:id="@+id/AppTitleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/description"
        android:src="@drawable/t9icon" />

    <TextView
        android:id="@+id/AppTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppTitleIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordEntry"
        android:layout_toRightOf="@+id/AppTitleText"
        android:text="@string/Login" />

    <EditText
        android:id="@+id/PasswordEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_alignLeft="@+id/UsernameEntry"
        android:layout_below="@+id/UsernameEntry"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/Password_signin" 
        android:visibility="invisible">

        <requestFocus />
    </EditText>

        <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppTitleText"    
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />
    
    <EditText
        android:id="@+id/UsernameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Username_signin" 
        android:visibility="invisible"/>

    <Button
        android:id="@+id/ChangePassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/AppTitleText"
        android:layout_alignTop="@+id/LoginButton"
        android:layout_marginRight="18dp"
        android:text="@string/ChangePass" />
  
</RelativeLayout>
